--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>buy NFT</title>
   </head>
   <body>
-    <section class="h-screen w-full bg-[#dbccf0] overflow-y-hidden">
+    <section class="p-2 h-screen w-full bg-[#dbccf0] overflow-y-hidden">
       <div class="w-full py-4">
         <nav class="flex max-w-7xl mx-auto items-center justify-between">
           <div class="flex items-center">
-            <p class="font-black text-3xl mr-16">
+            <h2 class="font-black text-3xl mr-16">
               <span
                 class="bg-gradient-to-r from-[#9424b7] via-[#9424b7] to-[#6222be] inline-block text-transparent bg-clip-text"
                 >Ori</span
               >ginal
-            </p>
+            </h2>
             <ul class="flex space-x-3 text-based text-gray-700">
               <li
                 class="border-b-4 border-transparent hover:text-black hover:border-b-4 hover:border-[#9424b7]"
@@ -49,7 +49,7 @@
               </li>
               <li>
                 <button
-                  class="flex items-center bg-[#9424b7] px-4 py-2 rounded text-gray-50 shadow-lg shadow-[#9424b7]/50"
+                  class="flex items-center bg-[#9424b7] px-4 py-2 rounded text-gray-50 shadow-lg shadow-[#9424b7]/50 hover:scale-95 transition-all"
                 >
                   Start for free
                   <svg
@@ -72,7 +72,67 @@
           </div>
         </nav>
       </div>
-      <header class="max-w-7xl h-full bg-yellow-500 mx-auto"></header>
+      <header class="max-w-7xl h-full mx-auto flex">
+        <div class="h-full w-1/2 flex flex-col justify-center">
+          <h2 class="font-black text-7xl">
+            <span
+              class="bg-gradient-to-r from-[#9424b7] via-[#9424b7] to-[#6222be] inline-block text-transparent bg-clip-text"
+              >NFT back-end</span
+            ><br />
+            for mobile apps
+          </h2>
+          <p class="text-xl font-normal my-6">
+            Original empowers your application with a complete NFT
+            infrastructure. Create, sell and transfer NFTs
+            <span
+              class="font-bold bg-gradient-to-r from-[#9424b7] via-[#9424b7] to-[#6222be] text-transparent bg-clip-text"
+            >
+              without managing wallets, smart contracts nor crypto.
+            </span>
+          </p>
+          <div class="flex space-x-2">
+            <button
+              class="w-[180px] flex items-center justify-center bg-[#9424b7] px-4 py-2 rounded text-gray-50 shadow-lg shadow-[#9424b7]/50 hover:scale-95 transition-all"
+            >
+              Login
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="ml-2 size-4"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
+                />
+              </svg>
+            </button>
+            <button
+              class="w-[180px] flex border-2 border-[#9424b7] items-center justify-center bg-white px-4 py-2 rounded text-[#9424b7] hover:scale-95 transition-all"
+            >
+              Documentation
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="ml-2 size-4"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+        <div class="bg-red-500 h-full w-1/2"></div>
+      </header>
     </section>
   </body>
 </html>
