--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <section class="p-2 h-screen w-full bg-[#dbccf0] overflow-y-hidden">
-      <div class="w-full py-4">
-        <nav class="flex max-w-7xl mx-auto items-center justify-between">
+      <div class="w-full lg:py-4 py-1">
+        <nav
+          class="flex px-4 lg:px-0 lg:max-w-7xl mx-auto items-center justify-between"
+        >
           <div class="flex items-center">
             <h2 class="font-black text-3xl mr-16">
               <span
@@ -17,7 +19,7 @@
                 >Ori</span
               >ginal
             </h2>
-            <ul class="flex space-x-3 text-based text-gray-700">
+            <ul class="lg:flex space-x-3 text-based text-gray-700 hidden">
               <li
                 class="border-b-4 border-transparent hover:text-black hover:border-b-4 hover:border-[#9424b7]"
               >
@@ -36,7 +38,9 @@
             </ul>
           </div>
           <div class="flex items-center">
-            <ul class="flex space-x-3 text-based text-gray-700 items-center">
+            <ul
+              class="lg:flex space-x-3 text-based text-gray-700 items-center hidden"
+            >
               <li
                 class="border-b-4 border-transparent hover:text-black hover:border-b-4 hover:border-[#9424b7]"
               >
@@ -69,12 +73,30 @@
                 </button>
               </li>
             </ul>
+            <div class="lg:hidden block text-gray-800">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+                />
+              </svg>
+            </div>
           </div>
         </nav>
       </div>
-      <header class="max-w-7xl h-full mx-auto flex">
-        <div class="h-full w-1/2 flex flex-col justify-center">
-          <h2 class="font-black text-7xl">
+      <header
+        class="px-4 lg:px-0 lg:max-w-7xl h-full mx-auto flex lg:flex-row flex-col"
+      >
+        <div class="h-full lg:w-1/2 w-full flex flex-col justify-center">
+          <h2 class="font-black lg:text-7xl text-5xl">
             <span
               class="bg-gradient-to-r from-[#9424b7] via-[#9424b7] to-[#6222be] inline-block text-transparent bg-clip-text"
               >NFT back-end</span
@@ -90,9 +112,11 @@
               without managing wallets, smart contracts nor crypto.
             </span>
           </p>
-          <div class="flex space-x-2">
+          <div
+            class="flex flex-col sm:flex-row lg:justify-start items-center sm:space-x-2"
+          >
             <button
-              class="w-[180px] flex items-center justify-center bg-[#9424b7] px-4 py-2 rounded text-gray-50 shadow-lg shadow-[#9424b7]/50 hover:scale-95 transition-all"
+              class="mb-2 w-[180px] flex items-center justify-center bg-[#9424b7] px-4 py-2 rounded text-gray-50 shadow-lg shadow-[#9424b7]/50 hover:scale-95 transition-all"
             >
               Login
               <svg
@@ -111,7 +135,7 @@
               </svg>
             </button>
             <button
-              class="w-[180px] flex border-2 border-[#9424b7] items-center justify-center bg-white px-4 py-2 rounded text-[#9424b7] hover:scale-95 transition-all"
+              class="mb-2 w-[180px] flex border-2 border-[#9424b7] items-center justify-center bg-white px-4 py-2 rounded text-[#9424b7] hover:scale-95 transition-all"
             >
               Documentation
               <svg
@@ -131,7 +155,7 @@
             </button>
           </div>
         </div>
-        <div class="bg-red-500 h-full w-1/2"></div>
+        <div class="bg-red-500 h-full lg:w-1/2 w-full"></div>
       </header>
     </section>
   </body>
