--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </li>
               <li>
                 <button
-                  class="flex items-center bg-[#9424b7] px-4 py-2 rounded text-gray-50 shadow-lg shadow-[#9424b7]/50 hover:scale-95 transition-all"
+                  class="flex items-center bg-[#9424b7] px-4 py-3 rounded-lg text-gray-50 shadow-lg shadow-[#9424b7]/50 hover:scale-95 transition-all"
                 >
                   Start for free
                   <svg
@@ -116,7 +116,7 @@
             class="flex flex-col sm:flex-row lg:justify-start items-center sm:space-x-2"
           >
             <button
-              class="mb-2 w-[180px] flex items-center justify-center bg-[#9424b7] px-4 py-2 rounded text-gray-50 shadow-lg shadow-[#9424b7]/50 hover:scale-95 transition-all"
+              class="mb-2 w-[180px] flex items-center justify-center bg-[#9424b7] px-4 py-3 rounded-lg text-gray-50 shadow-lg shadow-[#9424b7]/50 hover:scale-95 transition-all"
             >
               Login
               <svg
@@ -135,7 +135,7 @@
               </svg>
             </button>
             <button
-              class="mb-2 w-[180px] flex border-2 border-[#9424b7] items-center justify-center bg-white px-4 py-2 rounded text-[#9424b7] hover:scale-95 transition-all"
+              class="mb-2 w-[180px] flex border-2 border-[#9424b7] items-center justify-center bg-white px-4 py-3 rounded-lg text-[#9424b7] hover:scale-95 transition-all"
             >
               Documentation
               <svg
@@ -155,7 +155,9 @@
             </button>
           </div>
         </div>
-        <div class="bg-red-500 h-full lg:w-1/2 w-full"></div>
+        <div class="h-full lg:w-1/2 w-full flex items-center">
+          <img src="./assets/hero-picture.webp" alt="hero mobile" />
+        </div>
       </header>
     </section>
   </body>
